Modificaciones al style.css

--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,15 @@ body{
 }
 
 .meDedico{
-
+    margin-top: 1em;
 }
 
 .hobbies{
-
+    margin-top: 1em;
 }
 
 .proyectos{
-
+    margin-top: 1em;
 }
 
 footer{
