primera prueba responsive

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,80 +1,6 @@
 #container{
-    display: grid;
     width: 400px;
-    height: 200px;
-    background-color: rgb(24, 168, 168);
-    /* grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2fr); */
-    grid-template: repeat(2, 1fr)/ 1fr 20px repeat(4, 1fr) ;
-    grid-template-areas:  
-    "area1 area2 area3 area4 area5"
-    "area1 area2 area3 area4 area5";
+    height: 400px;
+    background-color: rebeccapurple;
 }
 
-.item {
-    /* width: 20px;
-    height: 20px; */
-    border: 1px solid black;
-
-}
-
-.colum-1{
-    /* grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3; */
-    grid-area: area1;
-}
-
-.colum-2{
-    /* grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3; */
-    grid-area: area2;
-}
-
-.colum-3{
-    /* grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 3; */
-    grid-area: area3;
-}
-
-.colum-4{
-    /* grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3; */
-    grid-area: area4;
-}
-
-.colum-5{
-    /* grid-column-start: 5;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 3; */
-    grid-area: area5;
-}
-
-
-.rojo{
-    background-color: red;
-}
-
-.azul{
-    background-color: blue;
-}
-
-.violeta{
-    background-color: violet;
-}
-
-.verde{
-    background-color: green;
-}
-
-.cafe{
-    background-color: brown;
-}
