--- a/public/css/mediaquerie.css
+++ b/public/css/mediaquerie.css
@@ -1,11 +1,65 @@
 
-@media screen and(min-width: 375px) and (max-width: 768) {
-    #container{
-        width: 200px;
-        height: 200px;
-        background-color: black;
-    }
-    input{
+/* Tablet */
+@media screen and (max-width: 937px) {
+    body{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(3,1fr);
+        /* grid-template-areas: "uno . ."
+        ". . dos "
+         ". . . "; */
         width: 100%;
+        height: 100vh;
+    }
+    .uno {
+        grid-column: 1/2;
+        grid-row:1/2;
+    }
+
+    .dos{
+        grid-column: 2/3;
+        grid-row:2/3;
+    }
+
+    .tres{
+        grid-column: 3/4;
+        grid-row:2/3;
+    }
+
+    .cuatro{
+        grid-column: 3/4;
+        grid-row:3/4;
+    }
+}
+/* Mobile */
+@media screen and (max-width: 624px) {
+    body{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(3,1fr);
+        /* grid-template-areas: "uno dos"
+        "tres cuatro"
+         "cinco seis"; */
+        width: 100%;
+        height: 100vh;
+    }
+    .uno {
+        grid-column: 1/2;
+        grid-row:1/2;
+    }
+
+    .dos{
+        grid-column: 2/3;
+        grid-row:2/3;
+    }
+
+    .tres{
+        grid-column: 1/2;
+        grid-row:3/4;
+    }
+
+    .cuatro{
+        grid-column: 2/3;
+        grid-row:3/4;
     }
 }
