--- a/_clases.scss
+++ b/_clases.scss
@@ -1,5 +1,4 @@
-.item{
-    background-color: red;
-    width: 200px;
-    height: 200px;
-}
+.tamaño-imagen{
+    width: 100%;
+    height: 100%;
+  }
