--- a/main.scss
+++ b/main.scss
@@ -1,8 +1,24 @@
-@import 'variables';
+@import 'grid';
 @import 'clases';
-#figura {
-    width: 400px;
-    height: 400px;
-}
-
+@import 'media';
+  
+  .uno{
+    grid-column: 1/2;
+    grid-row:1/2;
+  }
+  
+  .dos{
+    grid-column: 2/3;
+    grid-row:2/3;
+  }
+  
+  .tres{
+    grid-column: 4/5;
+    grid-row:2/3;
+  }
+  
+  .cuatro{
+    grid-column: 3/4;
+    grid-row:3/4;
+  }
 $size: 400px;
