--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,90 @@
-.item {
-  background-color: red;
-  width: 200px;
-  height: 200px;
+@charset "UTF-8";
+body {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  height: 100vh;
 }
 
-#figura {
-  width: 400px;
-  height: 400px;
+.tamaño-imagen {
+  width: 100%;
+  height: 100%;
+}
+
+/* Tablet */
+@media screen and (max-width: 937px) {
+  body {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 100%;
+    height: 100vh;
+  }
+
+  .uno {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .dos {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .tres {
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+
+  .cuatro {
+    grid-column: 3/4;
+    grid-row: 3/4;
+  }
+}
+/* Mobile */
+@media screen and (max-width: 624px) {
+  body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 100%;
+    height: 100vh;
+  }
+  body .uno {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  body .dos {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  body .tres {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  body .cuatro {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+}
+.uno {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.dos {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.tres {
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+
+.cuatro {
+  grid-column: 3/4;
+  grid-row: 3/4;
 }
 
 /*# sourceMappingURL=styles.css.map */
