--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,26 @@ body {
   height: 100%;
 }
 
+.uno {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.dos {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.tres {
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+
+.cuatro {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+
 /* Tablet */
 @media screen and (max-width: 937px) {
   body {
@@ -20,23 +40,19 @@ body {
     width: 100%;
     height: 100vh;
   }
-
-  .uno {
+  body .uno {
     grid-column: 1/2;
     grid-row: 1/2;
   }
-
-  .dos {
+  body .dos {
     grid-column: 2/3;
     grid-row: 2/3;
   }
-
-  .tres {
+  body .tres {
     grid-column: 3/4;
     grid-row: 2/3;
   }
-
-  .cuatro {
+  body .cuatro {
     grid-column: 3/4;
     grid-row: 3/4;
   }
@@ -66,25 +82,6 @@ body {
     grid-column: 2/3;
     grid-row: 3/4;
   }
-}
-.uno {
-  grid-column: 1/2;
-  grid-row: 1/2;
-}
-
-.dos {
-  grid-column: 2/3;
-  grid-row: 2/3;
-}
-
-.tres {
-  grid-column: 4/5;
-  grid-row: 2/3;
-}
-
-.cuatro {
-  grid-column: 3/4;
-  grid-row: 3/4;
 }
 
 /*# sourceMappingURL=styles.css.map */
